# fizz_buzz_v2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml  tests_run.yml
fizz_buzz_v2/: fizz_buzz_v2.py
fizz_buzz_v2/scripts/: fizz_buzz_v2.py
tests/: test_fizz_buzz.py
