[tool.poetry]
name = "fizz_buzz"
version = "0.1.0"
description = "FizzBuzz (for Hexlet`s interview)"
authors = ["Adrian Carver <adrian.carver@yandex.ru>"]
repository = "https://github.com/AdrianusWest/fizz_buzz_v2"
classifiers = [
  "Programming Language :: Python :: 3.10.4",
  "Natural Language :: English",
  "Environment :: Console"
]
packages = [
  { include = "fizz_buzz_v2" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fizz_buzz = "fizz_buzz.fizz_buzz:fizz_buzz"

