[tool.poetry]
name = "fizz_buzz_v2"
version = "0.1.0"
description = "FizzBuzz (for Hexlet`s interview)"
authors = ["Adrian Carver <adrian.carver@yandex.ru>"]
repository = "https://github.com/AdrianusWest/fizz_buzz_v2"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Natural Language :: English",
  "Environment :: Console"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fizz_buzz_v2 = "fizz_buzz_v2.scripts.fizz_buzz_v2:main"
